--- a/Api.Enigma/appsettings.json
+++ b/Api.Enigma/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "EnigmaDB": "Data Source=enigmadb.db"
+    },
+    "AllowedHosts": "*"
 }
